[gd_scene load_steps=5 format=2]

[ext_resource path="res://Berkahi Blackletter.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://InGameUpgrade.gd" type="Script" id=2]
[ext_resource path="res://pngs/GUI/upgradeMenuGUI.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[node name="InGameUpgrade" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 389.0
margin_top = 152.0
margin_right = 489.0
margin_bottom = 288.0
rect_scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 150.0
margin_right = 200.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 1 )
text = "Chose your upgrade"
align = 1

[node name="Option1" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -110.0
margin_right = 50.0
margin_bottom = -60.0
text = "Damage"

[node name="Option2" type="Button" parent="."]
margin_left = 590.0
margin_top = 400.0
margin_right = 690.0
margin_bottom = 450.0
text = "MaxHealth"

[node name="Option3" type="Button" parent="."]
margin_left = 590.0
margin_top = 500.0
margin_right = 690.0
margin_bottom = 550.0
text = "CoolDown"

[connection signal="pressed" from="Option1" to="." method="_on_Option1_pressed"]
[connection signal="pressed" from="Option2" to="." method="_on_Option2_pressed"]
[connection signal="pressed" from="Option3" to="." method="_on_Option3_pressed"]
